# app2.0

./: .env.example  README.md  pyproject.toml
.github/workflows/: python-tests.yml
backend/: .env  config.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/scraper/: __init__.py  models.py  parser.py  parsing_examples.md  scraper.py
backend/data/: __init__.py
backend/scripts/: scrape_criminal_code.py  test_scrape.py
backend/src/: __init__.py
backend/src/app/: __init__.py
backend/src/app/scraper/: models.py  parser.py  parsing_examples.md  scraper.py
backend/src/criminal_code_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_basic.py  test_models.py  test_parser.py  test_scrape_script.py  test_scraper.py
